--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.1.1",
     "axios": "^1.8.4",
     "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
